Added responsiveness to support smaller screen layouts.

--- a/package.json
+++ b/package.json
@@ -1,39 +1,79 @@
 {
-  "name": "ecommerce-dashboard",
+  "name": "e51deb847cda656c24aabfbe740829cd302410e8394d33661ba02aa27b0f9497",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@types/node": "^24.5.2",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "comment-json": "^4.2.5",
+    "env-cmd": "^11.0.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "rollup": "^4.44.1",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.24.1",
+    "vite": "^6.2.0",
+    "vite-plugin-static-copy": "^3.1.2",
+    "vite-tsconfig-paths": "^5.1.4"
+  },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^5.18.0",
-    "@mui/lab": "^7.0.0-beta.17",
+    "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
-    "@mui/x-charts": "^6.19.8",
-    "@types/react-router-dom": "^5.3.3",
-    "apexcharts": "^5.3.5",
-    "react": "^18.2.0",
-    "react-apexcharts": "^1.7.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.1",
-    "react-simple-maps": "^3.0.0"
+    "@mui/x-charts": "^8.11.3",
+    "@mui/x-data-grid": "^8.11.3",
+    "@mui/x-date-pickers": "^8.11.3",
+    "@mui/x-tree-view": "^8.11.3",
+    "date-fns": "^4.1.0",
+    "react": "latest",
+    "react-router-dom": "latest"
   },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+  "strictDependencies": {
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
+    "@mui/x-charts": "^8.11.3",
+    "@mui/x-data-grid": "^8.11.3",
+    "@mui/x-date-pickers": "^8.11.3",
+    "@mui/x-tree-view": "^8.11.3",
+    "date-fns": "^4.1.0",
+    "apexcharts": "^5.3.5",
+    "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.1",
+    "react-simple-maps": "^3.0.0",
+    "@eslint/js": "^9.21.0",
+    "@types/node": "^24.5.2",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "comment-json": "^4.2.5",
+    "env-cmd": "^11.0.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "rollup": "^4.44.1",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.24.1"
   }
 }
